# MinecraftSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  buildstandalone.bat  clearbuild.bat  clearbuild.sh
assets/shaders/: basic_collectable.shader  basic_cube.shader  basic_overlay.shader  basic_shadow.shader  cubemap.shader  inventory.shader  scene.shader  screen.shader  water.shader
dependencies/: CMakeCache.txt
src/: Application.cpp  Block.cpp  Block.h  Chunk.cpp  Chunk.h  GameDefinitions.cpp  GameDefinitions.h  GlStructure.cpp  GlStructure.h  InventorySystem.cpp  InventorySystem.h  Macros.h  Main.cpp  Memory.cpp  Memory.h  Renderer.cpp  Renderer.h  State.cpp  State.h  Ts_containers.h  Utils.cpp  Utils.h  Vertices.cpp  Vertices.h  World.cpp  World.h
